--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,1 +1,7 @@
-// TODO
+.postHeader {
+    height: 6rem;
+    max-width: 700px;
+    margin: 8 auto;
+    display: flex;
+    align-items: center;
+}
