--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -8,6 +8,15 @@
     a + a {
         margin-top: 3rem;
     }
+
+    button {
+        border: none;
+        background: transparent;
+        font-weight: 600;
+        font-size: 1.125rem;
+        color: var(--highlight);
+        margin-top: 4rem;
+    }
 } 
 
 
@@ -28,5 +37,17 @@
         list-style: none;
         margin-top: 1.5rem;
         display: flex;
+
+        & li {
+            font-size: 0.875rem;
+
+            & svg {
+                margin-right: 0.5rem;
+            }
+
+            & + li {
+                margin-left: 1.625rem;
+            }
+        }
     }
 }
