--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -15,6 +15,11 @@
 body {
   background: var(--background);
   color: var(--body);
+  padding: 10px;
+}
+
+main {
+  margin-top: 0 !important;
 }
 
 body, input, textarea, button, select {
